<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Nordic Thingy</string>
    <string name="name">Thingy</string>
    <string name="thingy_52">Thingy:52 </string>
    <string name="action_about_thingy"><a href="https://www.nordicsemi.com/thingy">About Thingy:52</a></string>
    <string name="action_about">About</string>
    <string name="action_dfu">DFU</string>
    <string name="environment_current_conditions_title">Current Conditions</string>
    <string name="environment_service_title">Environment</string>
    <string name="configuration">Configuration</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="no_ble">Device doesn\'t support BLE!</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="not_available">n/a</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="dev_name_info">Name your Thingy:52</string>
    <string name="dev_name_info_summary">Change the name of your Thingy:52 (optional).</string>
    <string name="user_info">User information</string>
    <string name="connect_thingy_summary">Status: disconnected.</string>
    <string name="status_connected_to_device">Status: connected to %s.</string>
    <string name="user_info_hint">Name</string>
    <string name="email_info">Email information</string>
    <string name="email">Email</string>
    <string name="device_name_hint">Thingy name</string>
    <string name="initial_configuration">Initial Configuration</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="error_username">Name cannot be empty</string>
    <string name="error_email">User email cannot be empty</string>
    <string name="get_started">GET STARTED</string>
    <string name="initial_setup_complete">Initial setup complete!</string>
    <string name="action_add">Add Thingy</string>
    <string name="no_thingy_connected_configuration">Please reconnect to %s to view the configuration</string>
    <string name="thingy_already_connected">Already connected to %s</string>
    <string name="no_thingy_connected">Not connected to a Thingy</string>
    <string name="no_thingy_configured">No Thingy configured</string>
    <string name="no_thingy_connected_step_one">Please follow step 1 to proceed</string>
    <string name="connect_to_thingy">Connect to a Thingy</string>
    <string name="location_info">Location</string>
    <string name="location_summary">Share your location (optional)</string>
    <string name="location_summary_details">By sharing your location other users may be able to see your Thingy device on a map with a location marker.</string>
    <string name="share_location">Share Thingy location</string>
    <string name="scan_thingy">Scan</string>
    <string name="disconnect_connect">Disconnect and scan</string>
    <string name="skip">Skip</string>
    <string name="environment_settings">Environment settings</string>
    <string name="environment_settings_cardview">ENVIRONMENT SETTINGS</string>
    <string name="connectivity_state">State</string>
    <string name="having_troubles">Having troubles?</string>
    <string name="thing_url"><a href="https://www.nordicsemi.com/thingy">"https://www.nordicsemi.com/thingy"</a></string>
    <string name="privacy_policy_url"><a href="https://www.nordicsemi.com/eng/About-us/Privacy-Policy">"https://www.nordicsemi.com/eng/About-us/Privacy-Policy"</a></string>
    <string name="github_thingy_app_url"><a href="https://www.nordicsemi.com/eng/About-us/Privacy-Policy">"https://github.com/NordicSemiconductor/Android-Nordic-Thingy"</a></string>
    <string name="github_thingy_fw_url"><a href="https://github.com/NordicSemiconductor/Nordic-Thingy52-FW">"https://github.com/NordicSemiconductor/Nordic-Thingy52-FW"</a></string>
    <string name="environment_settings_title">Environment Settings</string>
    <string name="thingy_location_marker_title">Marker Settings</string>
    <string name="interval_temperature">Temperature interval</string>
    <string name="interval_pressure">Pressure interval</string>
    <string name="interval_humidity">Humidity interval</string>
    <string name="interval_color_intensity">Color intensity interval</string>
    <string name="air_quality_interval">Air quality interval</string>
    <string name="time">Time</string>
    <string name="frequency">Frequency</string>
    <string name="interval_pedometer">Pedometer interval</string>
    <string name="interval_temperature_compensation">Temp. compensation interval</string>
    <string name="interval_compass">Compass interval</string>
    <string name="interval_compass_compensation">Compass compensation interval</string>
    <string name="interval_motion">Motion interval</string>
    <string name="interval_wake_on_motion">Wake on motion</string>
    <string name="motion_freq_hz">Hz</string>
    <string name="time_unit_ms">ms</string>
    <string name="time_unit_s">s</string>
    <string name="degrees_2">%.2f °</string>
    <string name="interval_ms">%d ms</string>
    <string name="interval_s">%d s</string>
    <string name="interval_hz">%d Hz</string>
    <string name="adv_interval_formula">x 0.625 ms =</string>
    <string name="decimal_format_ms"> %.2f ms</string>
    <string name="conn_interval_formula">x 1.25 ms = </string>
    <string name="supervision_timeout_formula">x 10 ms = </string>
    <string name="led_percentage">%d %%</string>
    <string name="error_temp_interval">Interval must be between 100 – 60000 milliseconds.</string>
    <string name="error_pressure_interval">Interval must be between 50 – 60000 milliseconds.</string>
    <string name="error_humidity_interval">Interval must be between 100 – 60000 milliseconds.</string>
    <string name="error_color_intensity_interval">Interval must be between 200 – 60000 milliseconds.</string>
    <string name="error_color_interval">Color interval cannot be less than %d seconds.</string>
    <string name="error_temp_interval_empty">Temperature interval cannot be empty.</string>
    <string name="error_pressure_interval_empty">Pressure interval cannot be empty.</string>
    <string name="error_color_intensity_interval_empty">Color intensity interval cannot be empty.</string>
    <string name="error_humidity_interval_empty">Humidity interval cannot be empty.</string>
    <string name="error_pedometer_interval_empty">Pedometer interval cannot be empty.</string>
    <string name="error_compass_interval_empty">Compass interval cannot be empty.</string>
    <string name="error_motion_interval_empty">Motion frequency cannot be empty.</string>
    <string name="settings_basic_thingy">Thingy Settings</string>
    <string name="settings_thingy_name">Thingy name</string>
    <string name="settings_adv_param_char">Advertising parameters</string>
    <string name="settings_appearance_char">Appearance</string>
    <string name="settings_connection_param_char">Connection parameters</string>
    <string name="settings_eddystone_url">Eddystone URL</string>
    <string name="settings_cloud_token">Cloud token</string>
    <string name="settings_fw_version">Firmware version</string>
    <string name="settings_fw_version_title">Firmware Version</string>
    <string name="settings_thingy_cloud">Cloud Settings</string>
    <string name="settings_location">Location Settings</string>
    <string name="settings_share_location">Share location</string>
    <string name="settings_environment">Environment Settings</string>
    <string name="settings_motion">Motion Settings</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="gas_mode_one">1 second</string>
    <string name="gas_mode_two">10 seconds</string>
    <string name="gas_mode_three">1 minute</string>
    <string name="barometer_mode">Barometer</string>
    <string name="altimeter_mode">Altimeter</string>
    <string name="appearance_hint">Appearance</string>
    <string name="min_connection_params_hint">Min. connection interval</string>
    <string name="max_connection_params_hint">Max. connection interval</string>
    <string name="slave_latency_hint">Slave latency</string>
    <string name="conn_sup_timeout_hint">Supervision timeout</string>
    <string name="url_hint">URL</string>
    <string name="ifttt_token_hint">IFTTT Token</string>
    <string name="error_ifttt_token_too_long">Cloud token must be between 1 – 100 bytes.</string>
    <string name="url_data_text">Url text</string>
    <string name="error_empty_device_name">Thingy name cannot be empty.</string>
    <string name="error_long_device_name">Thingy name cannot exceed more than 10 bytes.</string>
    <string name="error_empty_min_conn_interval">Min. connection interval cannot be empty.</string>
    <string name="error_empty_max_conn_interval">Max. connection interval cannot be empty.</string>
    <string name="error_empty_slave_latency">Slave latency cannot be empty.</string>
    <string name="error_empty_supervision_timeout">Supervision timeout cannot be empty.</string>
    <string name="error_uint16">Value does not match UINT16.</string>
    <string name="error_uint8">Value does not match UINT8.</string>
    <string name="error_configuring_char">Unable to configure characteristic.</string>
    <string name="error_invalid_conn_interval">Value must be within 7.5 and 4000 ms.</string>
    <string name="error_invalid_slave_latency">Value must be within 0 and 500.</string>
    <string name="error_invalid_supervision_timeout">Value must be within 100 and 32000 ms.</string>
    <string name="error_empty_cloud_token">Cloud token cannot be empty.</string>
    <string name="error_cloud_token_too_long">Cloud token cannot be longer than 250 bytes.</string>
    <string name="error_cloud_token_length">Cloud token must between 1 – 250 bytes.</string>
    <string name="error_cloud_token">Error, unable to write to cloud token characteristic.</string>
    <string name="cloud_token_settings">Cloud Token</string>
    <string name="adv_interval">Advertising interval</string>
    <string name="adv_time_out">Timeout</string>
    <string name="error_empty_adv_interval">Error, value cannot be empty</string>
    <string name="error_adv_interval">Must be between 20 ms and 10.24 seconds.</string>
    <string name="error_empty_adv_timeout">Error, value cannot be empty</string>
    <string name="error_adv_timeout">Value must be between 0 and 180 seconds.</string>
    <string name="adv_param_title">Advertising Interval Parameters</string>
    <string name="info_git_hub">GitHub</string>
    <string name="github_thingy_fw">Thingy:52</string>
    <string name="github_thingy_android_app">Nordic Thingy for Android</string>
    <string name="about_link"><a href="http://www.nordicsemi.com">www.nordicsemi.com</a></string>
    <string name="action_facebook">Facebook</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_linkedin">LinkedIn</string>
    <string name="action_youtube">YouTube</string>
    <string name="action_devzone">Developer Zone</string>
    <string name="about_text"><b>Nordic Thingy</b> is an application that lets you connect to Thingy:52 by Nordic.
        This app supports visualising data obtained from the sensors on the Thingy:52.</string>
    <string name="about_info">Info</string>
    <string name="mpchart_license">MPAndroidChart</string>
    <string name="mpchart_license_url">https://github.com/PhilJay/MPAndroidChart/blob/master/README.md#license</string>
    <string name="rajawali_license">Rajawali</string>
    <string name="rajawali_license_url">https://github.com/Rajawali/Rajawali/blob/master/LICENSE.txt</string>
    <string name="website">Visit website</string>
    <string name="privacy">Privacy policy</string>
</resources>