<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2010 - 2017, Nordic Semiconductor ASA
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this
  ~    list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form, except as embedded into a Nordic
  ~    Semiconductor ASA integrated circuit in a product or a software update for
  ~    such product, must reproduce the above copyright notice, this list of
  ~    conditions and the following disclaimer in the documentation and/or other
  ~    materials provided with the distribution.
  ~
  ~ 3. Neither the name of Nordic Semiconductor ASA nor the names of its
  ~    contributors may be used to endorse or promote products derived from this
  ~    software without specific prior written permission.
  ~
  ~ 4. This software, with or without modification, must only be used with a
  ~    Nordic Semiconductor ASA integrated circuit.
  ~
  ~ 5. Any software provided in binary form under this license must not be reverse
  ~    engineered, decompiled, modified and/or disassembled.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY NORDIC SEMICONDUCTOR ASA "AS IS" AND ANY EXPRESS
  ~ OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
  ~ OF MERCHANTABILITY, NONINFRINGEMENT, AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL NORDIC SEMICONDUCTOR ASA OR CONTRIBUTORS BE
  ~ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
  ~ GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
  ~ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
  ~ LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
  ~ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="400dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/nordic_logo_horiz"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/about_text"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="Version 2.0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="20dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/about_link"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/action_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_facebook"
                android:src="@drawable/ic_facebook"/>

            <ImageView
                android:id="@+id/action_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:contentDescription="@string/action_twitter"
                android:src="@drawable/ic_twitter"/>

            <ImageView
                android:id="@+id/action_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:contentDescription="@string/action_linkedin"
                android:src="@drawable/ic_linkedin"/>

            <ImageView
                android:id="@+id/action_youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:contentDescription="@string/action_youtube"
                android:src="@drawable/ic_youtube"/>

            <ImageView
                android:id="@+id/action_devzone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:contentDescription="@string/action_devzone"
                android:src="@drawable/ic_devzone"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>