<!--
  ~ Copyright (c) 2010 - 2017, Nordic Semiconductor ASA
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this
  ~    list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form, except as embedded into a Nordic
  ~    Semiconductor ASA integrated circuit in a product or a software update for
  ~    such product, must reproduce the above copyright notice, this list of
  ~    conditions and the following disclaimer in the documentation and/or other
  ~    materials provided with the distribution.
  ~
  ~ 3. Neither the name of Nordic Semiconductor ASA nor the names of its
  ~    contributors may be used to endorse or promote products derived from this
  ~    software without specific prior written permission.
  ~
  ~ 4. This software, with or without modification, must only be used with a
  ~    Nordic Semiconductor ASA integrated circuit.
  ~
  ~ 5. Any software provided in binary form under this license must not be reverse
  ~    engineered, decompiled, modified and/or disassembled.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY NORDIC SEMICONDUCTOR ASA "AS IS" AND ANY EXPRESS
  ~ OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
  ~ OF MERCHANTABILITY, NONINFRINGEMENT, AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL NORDIC SEMICONDUCTOR ASA OR CONTRIBUTORS BE
  ~ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
  ~ GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
  ~ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
  ~ LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
  ~ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.nordicsemi.android.nrfthingy.common.AboutActivity"
    android:background="@color/colorBackground">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="no.nordicsemi.android.nrfthingy.common.AboutActivity"
        android:background="@color/colorBackground">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ActionBarThemeOverlay"
                app:popupTheme="@style/ActionBarPopupThemeOverlay"
                app:titleTextAppearance="@style/ActionBar.TitleText" />

        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_title"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/app_bar_layout">

            <LinearLayout
                style="@style/PreferenceCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PreferenceCategoryTitle"
                    android:text="@string/thingy_52" />

                <LinearLayout
                    android:id="@+id/category_about_thingy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:minHeight="@dimen/preference_category_height"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_info_grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/PreferenceCategory"
                            android:text="@string/website" />

                        <TextView
                            style="@style/PreferenceCategorySummary"
                            android:text="@string/thing_url"
                            android:autoLink="web"
                            android:linksClickable="true" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/PreferenceCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PreferenceCategoryTitle"
                    android:text="@string/info_git_hub" />

                <LinearLayout
                    android:id="@+id/category_thingy_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_nav_github"
                        android:padding="16dp"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:minHeight="@dimen/preference_category_height"
                        android:gravity="center_vertical">

                        <TextView
                            android:text="@string/github_thingy_fw"
                            style="@style/PreferenceCategory" />

                        <TextView
                            style="@style/PreferenceCategorySummary"
                            android:text="@string/github_thingy_fw_url"
                            android:autoLink="web"
                            android:linksClickable="true" />
                    </LinearLayout>

                </LinearLayout>

                <View style="@style/PreferenceCategoryDivider" />

                <LinearLayout
                    android:id="@+id/category_thingy_app_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/preference_category_height"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_nav_github"
                        android:padding="16dp"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/PreferenceCategory"
                            android:text="@string/github_thingy_android_app" />

                        <TextView
                            style="@style/PreferenceCategorySummary"
                            android:text="@string/github_thingy_app_url"
                            android:autoLink="web"
                            android:linksClickable="true" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/PreferenceCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PreferenceCategoryTitle"
                    android:text="@string/about_info" />

                <LinearLayout
                    android:id="@+id/category_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/preference_category_height"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_info_grey"
                        android:padding="16dp"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        style="@style/PreferenceCategory"
                        android:text="@string/action_about" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/category_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/preference_category_height"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_info_grey"
                        android:padding="16dp"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/PreferenceCategory"
                            android:text="@string/privacy" />

                        <TextView
                            style="@style/PreferenceCategorySummary"
                            android:text="@string/privacy_policy_url"
                            android:autoLink="web"
                            android:linksClickable="true" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/PreferenceCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PreferenceCategoryTitle"
                    android:text="@string/about_licenes" />

                <LinearLayout
                    android:id="@+id/category_mpchart_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/preference_category_height"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_info_grey"
                        android:padding="16dp"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/PreferenceCategory"
                            android:text="@string/mpchart_license" />

                        <TextView
                            style="@style/PreferenceCategorySummary"
                            android:text="@string/mpchart_license_url"
                            android:autoLink="web"
                            android:linksClickable="true" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/category_rajawali_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/preference_category_height"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_info_grey"
                        android:padding="16dp"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/PreferenceCategory"
                            android:text="@string/rajawali_license" />

                        <TextView
                            style="@style/PreferenceCategorySummary"
                            android:text="@string/rajawali_license_url"
                            android:autoLink="web"
                            android:linksClickable="true" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>